Add file option to maven task

--- a/src/main/resources/views/maventask.template.html
+++ b/src/main/resources/views/maventask.template.html
@@ -7,6 +7,10 @@
     <input id="profiles" name="profiles" type="text" ng-model="Profiles" ng-required="false"/>
 </div>
 <div class="form_item_block">
+    <label for="file">File:</label>
+    <input id="file" name="file" type="text" ng-model="File" ng-required="false"/>
+</div>
+<div class="form_item_block">
     <label>Flags:</label>
     <div class="checkbox_row">
         <input id="offline2" type="checkbox" ng-model="Offline2" ng-init="Offline2 = Offline" ng-change="Offline = Offline2" ng-true-value="true" ng-false-value="false">
